--- a/config/config.ini
+++ b/config/config.ini
@@ -5,7 +5,7 @@ bucket = cf-templates-x02s7dv5pp0s-us-east-1
 stack_name = test-iam-roles-cluster
 region = us-east-1
 profile = default
-owner_tag = srini.a@gmail.com
+owner_tag = srinivas.a@gmail.com
 application_tag = iam-roles-test
 
 [tags]
